--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "fuse.js": "^6.6.2",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-images-viewer": "^1.7.1",
-    "react-paginate": "^8.1.3"
+    "react-paginate": "^8.1.3",
+    "ts-debounce": "^4.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
